# crude-prosperity

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: REFERENCES.md
data/final/: .gitignore  non_oil_producing_countries.csv.dvc  oil_producing_countries.csv.dvc
data/processed/: .gitignore  countries_with_nan.csv.dvc  country_list_final_clean.csv.dvc  gdp_clean_final.csv.dvc  oil_states_clean_final.csv.dvc
data/raw/: .gitignore  oil-producing-countries.csv.dvc  oil-producing-nation.csv.dvc  world-country-list.csv.dvc  world-gdp.csv.dvc
notebook/: 01-load.ipynb  02-clean.ipynb  03-prepared.ipynb  04-analyze.ipynb
