[tool.poetry]
name = "crude-prosperity"
version = "0.1.0"
description = "Unveilling Eonomics Dynamics in Oil Producing Nation Through GDP Analysis "
authors = ["Ridwan Amzat <amzatr886@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = {extras = ["gdrive"], version = "^3.30.3"}
ipython = "^8.18.1"
ipykernel = "^6.27.1"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
